# mailclerk

./: .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml
.cargo/: config.toml
debug/: webview_debug.html
entity/: Cargo.toml
entity/src/: auto_cleanup_setting.rs  custom_email_rule.rs  email_embedding.rs  email_training.rs  lib.rs  mod.rs  prelude.rs  processed_daily_summary.rs  processed_email.rs  sea_orm_active_enums.rs  system_email_rule.rs  user.rs  user_account_access.rs  user_email_rule.rs  user_token_usage_stat.rs
libs/tokenizer/src/: lib.rs
prisma/: schema.prisma
prisma/migrations/20241223205636_add_setup_completed_flag/: migration.sql
prisma/migrations/20241225190639_add_desc_to_custom/: migration.sql
prisma/migrations/20250121024448_add_mail_label_to_custom_rule/: migration.sql
prisma/migrations/20250121024754_add_label_color/: migration.sql
prisma/migrations/20250121161435_edit_custom_rule/: migration.sql
prisma/migrations/20250121172813_rm_label_color_field/: migration.sql
prisma/migrations/20250122191633_modify_cleanup/: migration.sql
prisma/migrations/20250122223126_rm_disabled_fr_cleanup/: migration.sql
prisma/migrations/20250130215735_add_updated_trigger/: migration.sql
server/: Cargo.toml
server/src/: error.rs  main.rs  rate_limiters.rs  server_config.rs  util.rs
server/src/auth/: jwt.rs  session_store.rs
server/src/db_core/: prelude.rs
server/src/email/: client.rs  daily_summary_mailer.rs  mod.rs  parsed_message.rs  processor.rs  rules.rs  sanitized_message.rs  simplified_message.rs
server/src/embed/: chunker.rs  mod.rs  queue.rs  service.rs
server/src/model/: custom_email_rule.rs  default_email_rule_override.rs  email_embedding.rs  mod.rs  processed_email.rs  response.rs  system_email_rule.rs  user.rs  user_email_rule.rs
server/src/notify/: mod.rs
server/src/observability/: common.rs  mod.rs  pager.rs  pipeline_tracker.rs  scan_tracker.rs
server/src/prompt/: mistral.rs  mistral_batch.rs  mod.rs  priority_queue.rs  task_extraction.rs
server/src/prompt/mistral/: batch.rs  mod.rs  on_demand.rs  task_extraction.rs
server/src/routes/: account_connection.rs  app_router.rs  auth.rs  custom_email_rule.rs  email.rs  gmail_labels.rs  mod.rs  user_email_rule.rs
server/src/routes/email/: feed.rs  mod.rs  read.rs  search.rs  write.rs
server/src/routes/handlers/: auth.rs  common.rs  dev_only.rs  mod.rs  scan.rs  user.rs  user_email_rule.rs
server/src/routes/handlers/email/: feed.rs  mod.rs  modify.rs  read.rs  shared.rs  write.rs
server/src/routes/router/: mod.rs  scanner.rs  server.rs
server/src/state/: cleanup.rs  email_client_map.rs  mod.rs  tasks.rs
server/src/state/email_processor/: mod.rs  processor.rs  processor_map.rs
server/src/state/email_scanner/: batch_processor.rs  initial_scan.rs  mod.rs  processor.rs  processor_map.rs  shared.rs
server/src/state/email_scanner/queue_processor/: mod.rs  processor_map.rs
server/src/state/email_scanner/scanner_pipeline/: done_handler.rs  fetcher.rs  mod.rs  orchestrator.rs  poller.rs  prompt_stages.rs  queues.rs  types.rs
server/src/testing/: common.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
tools/: Cargo.toml
tools/src/: lib.rs
(+36 files in other folders)
