[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
config = "0.14.0"
google-gmail1 = "6.0.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.0", features = ["timeout"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors", "request-id", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "std"] }
entity = { version = "*", path = "../entity" }
dotenvy = "0.15.7"
chrono = "0.4.38"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
futures = "0.3.30"
mimalloc = "0.1.43"
mail-parser = "0.9.4"
regex = "1.10.6"
tokenizers = { version = "0.20.0", features = ["http"] }
lettre = { version = "0.11.9", features = ["builder"] }
leaky-bucket = "1.1.2"
minijinja = "2.3.1"
base64 = "0.22.1"
html2text = "0.12.6"
google-cloud-pubsub = "0.29.1"
indexmap = "2.6.0"
tokio-util = "0.7.12"
google-cloud-googleapis = "0.15.0"
chrono-tz = "0.10.0"
derive_more = { version = "1.0.0", features = ["display"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
lib-utils = { path = "../libs/lib-utils" }
lib-email-clients = { path = "../libs/lib-email-clients" }
url = "2.5.3"
oauth2 = "4.4.2"
async-session = "3.0.0"
axum-extra = { version = "0.9.4", features = ["typed-header"] }
http = "1.1.0"
jsonwebtoken = "9.3.0"
strum = { version = "0.26.3", features = ["derive"] }
indoc = "2.0.5"
hex = "0.4.3"
tower_governor = { version = "0.5.0", features = ["axum", "tracing"] }
governor = "0.8.0"
uuid = { version = "1.11", features = ["v4"] }
ammonia = "4"
once_cell = "1.21.3"

[dependencies.sea-orm]
version = "1.0.0-rc.5"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[features]
mock = ["sea-orm/mock"]

