[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "gen-key"
path = "src/bin/gen_key.rs"

[[bin]]
name = "decrypt"
path = "src/bin/decrypt.rs"

[[bin]]
name = "tokenize"
path = "src/bin/tokenize.rs"

[[bin]]
name = "cosine-similarity"
path = "src/bin/cosine_similarity.rs"

[dependencies]
# -- App Crates
lib-utils = { path = "../libs/lib-utils" }
tokenizer = {path = "../libs/tokenizer"}
# -- Others
dotenvy = "0.15.7"
rand = "0.8"
itertools = "0.13"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
